numpy/typing/tests/data/fail/shape.pyi
from typing import Any
import numpy as np

np.ndarray[tuple[str, str], Any]  # E: Value of type variable
